package org.example.Manos;

public class CartaAlta extends Mano{

    public CartaAlta (){
        super("Carta Alta", 5, 1);
    }
//    @Override
//    public String getNombre() {
//        return "Carta Alta";
//    }
//
//    @Override
//    public int getPuntajeBase(){
//        return 5;
//    }
//
//    @Override
//    public int getMultiplicadorBase(){
//        return 1;
//    }
}