package org.example.Manos;

public class Color extends Mano{

    public Color (){
        super("Color", 35, 4);
    }

//    @Override
//    public String getNombre() {
//        return "Color";
//    }
//
//    @Override
//    public int getPuntajeBase(){
//        return 35;
//    }
//
//    @Override
//    public int getMultiplicadorBase(){
//        return 4;
//    }
}