package org.example.Manos;

public class Escalera extends Mano{

    public Escalera (){
        super("Escalera", 30, 4);
    }

//    @Override
//    public String getNombre() {
//        return "Escalera";
//    }
//
//    @Override
//    public int getPuntajeBase(){
//        return 30;
//    }
//
//    @Override
//    public int getMultiplicadorBase(){
//        return 4;
//    }
}