package org.example.Manos;

public class Par extends Mano{

    public Par (){
        super("Par", 10, 2);
    }

//    @Override
//    public String getNombre() {
//        return "Par";
//    }
//
//    @Override
//    public int getPuntajeBase(){
//        return 10;
//    }
//
//    @Override
//    public int getMultiplicadorBase(){
//        return 2;
//    }
}
