package org.example.Manos;

public class Poker extends Mano{

    public Poker (){
        super("Poker", 60, 7);
    }

//    @Override
//    public String getNombre() {
//        return "Poker";
//    }
//
//    @Override
//    public int getPuntajeBase(){
//        return 60;
//    }
//
//    @Override
//    public int getMultiplicadorBase(){
//        return 7;
//    }
}
